# infrabot-agent

./: .gitattributes  .gitignore  Dockerfile  Makerfile  README.md  deploy-infrabot.ps1  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
app/: main.py  models.py
app/services/: load_data.py  openai_llm.py
infrabot-backend/: .dockerignore  .env.azure  .env.example  .env.local  Dockerfile  Dockerfile.pip  README.md  entrypoint.sh  manage.py  pyproject.toml
infrabot-backend/.git_disabled/: config  index
infrabot-backend/.git_disabled/logs/: HEAD
infrabot-backend/app/: main.py  models.py
infrabot-backend/app/services/: circuit_breaker.py  connection_manager.py  ingest_service.py  load_data.py  monitoring.py  openai_llm.py
infrabot-backend/tests/: test_chat.py
infrabot-frontend/: .dockerignore  Dockerfile  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
infrabot-frontend/app/: globals.css  layout.tsx  page.tsx
infrabot-frontend/app/api/chat/: route.ts
infrabot-frontend/components/: action-button.tsx  chat-header.tsx  chat-history-sidebar.tsx  chat-interface.tsx  chat-message.tsx  date-picker-demo.tsx  drawer-demo.tsx  login-screen.tsx  mobile-sidebar.tsx  suggestion-chip.tsx  suggestion-prompts.tsx  theme-provider.tsx  theme-toggle.tsx  thinking-indicator.tsx
infrabot-frontend/components/ui/: date-picker.tsx  drawer.tsx  sheet.tsx
k8s/: deployment.yaml  service.yaml
milvus/: docker-compose.yml
milvus/volumes/milvus/rdb_data/: 000021.sst  000027.sst  000033.sst  000039.sst  000047.sst  000055.sst  000063.sst  000071.sst  000079.sst  000087.sst  IDENTITY  LOG  LOG.old.1751637846423980  LOG.old.1751643771736776  LOG.old.1751650576841682  LOG.old.1751884909450799  LOG.old.1751886503114363  LOG.old.1751888489711856  LOG.old.1751889467480909  LOG.old.1751920051173043  LOG.old.1751979872807125  LOG.old.1751987415167519  LOG.old.1751989078073903  LOG.old.1752264067126723  MANIFEST-000088
milvus/volumes/milvus/rdb_data_meta_kv/: 000086.sst  IDENTITY  LOG  LOG.old.1751637846260369  LOG.old.1751643771591334  LOG.old.1751650576665594  LOG.old.1751884909300916  LOG.old.1751886502957316  LOG.old.1751888489537008  LOG.old.1751889467286504  LOG.old.1751920050968349  LOG.old.1751979872640645  LOG.old.1751987414990478  LOG.old.1751989077929090  LOG.old.1752264066959817  MANIFEST-000082
milvus/volumes/minio/.minio.sys/: format.json
persistdb/: chroma.sqlite3
(+8 files in other folders)
